Removed Keying ability overwrites files in 2.8x #72578

Closed
opened 2019-12-19 15:34:16 +01:00 by ChristopherAnderssarian · 10 comments

System Information
Operating system: Windows 7
GPU: Radeon Vega 64, Divider version: 19.12.2
CPU: Intel Core i7-5960X

Blender Version

Broken: blender-2.80-f6cb5f54494e-windows64 (official release) and after
Working: blender-2.79b-f4dc9f9d68b-windows64 (official release)

Short description of error

One of the areas that keying has been removed from is in
Properties Editor --> Output Properties --> Output notably Overwrite.
This is troublesome as if you have disabled Overwrite for a
number of frames (in 2.79) then open in 2.8x,
this will get disregarded and the frames will be overwritten.
This can be an intermittent issue as depending on when you save in 2.79,
as the value will carry over unchanged/unchanging to 2.8x.

Exact steps for others to reproduce the error

Open: Keying_Overwrite.blend

In 2.79b you'll see Overwrite keyed. The markers show when the keyframes are.
In 2.8x you'll see there are no keyframes for Overwrite.

Exact steps for others to reproduce the error from scratch

Try to key any of the four toggles in Output Properties.

**System Information** Operating system: Windows 7 GPU: Radeon Vega 64, Divider version: 19.12.2 CPU: Intel Core i7-5960X **Blender Version** Broken: `blender-2.80-f6cb5f54494e-windows64` (official release) and after Working: `blender-2.79b-f4dc9f9d68b-windows64` (official release) **Short description of error** One of the areas that keying has been removed from is in `Properties Editor --> Output Properties --> Output` notably Overwrite. This is troublesome as if you have disabled Overwrite for a number of frames (in 2.79) then open in 2.8x, this will get disregarded and the frames will be overwritten. This can be an intermittent issue as depending on when you save in 2.79, as the value will carry over unchanged/unchanging to 2.8x. **Exact steps for others to reproduce the error** Open: [Keying_Overwrite.blend](https://archive.blender.org/developer/F8234433/Keying_Overwrite.blend) In 2.79b you'll see Overwrite keyed. The markers show when the keyframes are. In 2.8x you'll see there are no keyframes for Overwrite. **Exact steps for others to reproduce the error from scratch** Try to key any of the four toggles in Output Properties.

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

Added subscriber: @mano-wii

Added subscriber: @mano-wii

By keying do you mean Insert a keyframe (shortcut i)?
In 2.79 this is not possible either.
Aren't you using an addon to animate these properties?

By keying do you mean Insert a keyframe (shortcut `i`)? In 2.79 this is not possible either. Aren't you using an addon to animate these properties?
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

@mano-wii: I can animate Overwrite in 2.79b.

This was disabled in b66ae8259e though.

@ideasman42 : not sure about the others, but for Overwrite, I can actually see this being useful?
Were there any issues with this?

@mano-wii: I can animate Overwrite in 2.79b. This was disabled in b66ae8259e though. @ideasman42 : not sure about the others, but for `Overwrite`, I can actually see this being useful? Were there any issues with this?

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

The removal of animatibility happened in b66ae8259e without any motivation. @ideasman42 can you explain why this change happened?

@ChristopherAnderssarian you can work around this by simply keeping the 'Overwrite' checkbox unchecked, and deleting those frames you want to re-render.

The removal of animatibility happened in b66ae8259e without any motivation. @ideasman42 can you explain why this change happened? @ChristopherAnderssarian you can work around this by simply keeping the 'Overwrite' checkbox unchecked, and deleting those frames you want to re-render.

This issue was referenced by f46ba1a7e0

This issue was referenced by f46ba1a7e06d534bd93c950aed4feca87edc4fea

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Campbell Barton self-assigned this 2019-12-23 23:08:16 +01:00

Added note on the commit for why these animation settings were removed.

Animating UI options lock-interface or display-mode aren't useful, I grouped this option in with those, while it's a little obscure, it works well so added it back.

Added note on the commit for why these animation settings were removed. Animating UI options lock-interface or display-mode aren't useful, I grouped this option in with those, while it's a little obscure, it works well so added it back.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72578
No description provided.