Fix T72578: overwrite not animatable in 2.8x

This was disabled as part of b66ae8259e015 which disabled
animation for display mode and other cases where it doesn't make sense.

However it's useful to be able to overwrite frame ranges,
adding this back.